--- a/coming_soon.html
+++ b/coming_soon.html
@@ -22,21 +22,34 @@
                 <a class="brand" href="index.html">
                     <div class="brand_box">
                         <img src="assets/images/common/logo-white.png" alt="LOGO">
-                        <div>
-                            <p class="title">Studio</p>
-                            <p class="tagline">Raymond Fong How</p>
+                        <div class="brand_text">
+                            <div>
+                                <p class="title">Studio</p>
+                            </div>
+                            <div>
+                                <p class="tagline">Raymond Fong How</p>
+                            </div>
                         </div>
                     </div>
                 </a>
-                <a class="nav_opt" href="albums.html">
-                    <p>Albums</p>
-                </a>
-                <a class="nav_opt" href="all_works.html">
-                    <p>All Works</p>
-                </a>
-                <a class="nav_opt" href="about_me.html">
-                    <p>About Me</p>
-                </a>
+                <div class="nav_blank">
+                    
+                </div>
+                <div class="nav_opt">
+                    <a href="albums.html">
+                        <p>Albums</p>
+                    </a>
+                </div>
+                <div class="nav_opt">
+                    <a href="all_works.html">
+                        <p>All Works</p>
+                    </a>
+                </div>
+                <div class="nav_opt">
+                    <a href="about_me.html">
+                        <p>About Me</p>
+                    </a>
+                </div>
             </nav>
         </header>
         <script>
