--- a/all_works.html
+++ b/all_works.html
@@ -118,13 +118,13 @@
                     </div>
                     <div class="work_info">
                         <div class="work_cover">
-                            <img src="assets/images/album_covers/carbonate-summer_cover.jpg" alt="carbonate-summer_cover">
+                            <img src="assets/images/album_covers/soda-summer_cover.jpg" alt="soda-summer_cover">
                         </div>
                         <div class="work_text">
                             <div class="work_header">
                                 <p class="work_title">
-                                    <a href="work_pages/carbonate-summer.html">
-                                        可乐 · 盛夏 Carbonate-Summer
+                                    <a href="work_pages/soda-summer.html">
+                                        可乐 · 季夏 Soda-Summer
                                     </a>
                                 </p>
                                 <p class="work_details">
@@ -274,13 +274,13 @@
                     </div>
                     <div class="work_info">
                         <div class="work_cover">
-                            <img src="assets/images/album_covers/carbonate-summer_cover.jpg" alt="carbonate-summer_cover">
+                            <img src="assets/images/album_covers/soda-summer_cover.jpg" alt="soda-summer_cover">
                         </div>
                         <div class="work_text">
                             <div class="work_header">
                                 <p class="work_title">
-                                    <a href="work_pages/carbonate-summer.html">
-                                        可乐 · 盛夏 Carbonate-Summer
+                                    <a href="work_pages/soda-summer.html">
+                                        可乐 · 季夏 Soda-Summer
                                     </a>
                                 </p>
                                 <p class="work_details">
