--- a/work_pages/lettuce_party.html
+++ b/work_pages/lettuce_party.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="song_block">
                     <audio controls>
-                        <source src="../assets/audio/Lettuce Party.mp3" type="audio/wav">
+                        <source src="../assets/audio/Lettuce Party.wav" type="audio/wav">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
